Database connection (pg), Swagger and prisma implementation and auth jwt
